updated archive and about page

--- a/themes/mero/layouts/partials/recentarticles.html
+++ b/themes/mero/layouts/partials/recentarticles.html
@@ -13,6 +13,6 @@
   <p class="ml-2 mb-1">{{ .Description }}</p>
   {{ end }}
   <p class="text-right m-0">
-    <a href="{{ `/archive/` | relURL }}">See All</a>
+    <a href="{{ `/post/` | relURL }}">See All</a>
   </p>
 </div>
